--- a/client/src/app/shared/shared-video-playlist/video-playlist-miniature.component.scss
+++ b/client/src/app/shared/shared-video-playlist/video-playlist-miniature.component.scss
@@ -99,7 +99,7 @@
   }
 
   .miniature-thumbnail {
-    @include margin-right(10px);
+    @include margin-right(1rem);
 
     min-width: var(--rowThumbnailWidth);
     max-width: var(--rowThumbnailWidth);
